--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "git@github.com:twbs/bootstrap.git#^4.1.3"
+    "bootstrap": "git@github.com:twbs/bootstrap.git#^4.1.3",
+    "jquery": "^3.3.1"
   }
 }
