--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "git@github.com:twbs/bootstrap.git#^4.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "components-font-awesome": "^5.0.6"
   }
 }
