--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "git@github.com:twbs/bootstrap.git#^4.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "Font-Awesome": "git@github.com:FortAwesome/Font-Awesome.git#^5.2.0",
   }
 }
