--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "spatie/laravel-permission": "^2.12",
+        "intervention/image": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
