--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "git@github.com:twbs/bootstrap.git#^4.1.3",
     "jquery": "^3.3.1",
-    "components-font-awesome": "^5.0.6"
+    "components-font-awesome": "^5.0.6",
+    "jquery-ui": "^1.12.1"
   }
 }
