--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "dev-master",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
-        "spatie/laravel-permission": "^2.12",
-        "intervention/image": "dev-master"
+        "nesbot/carbon": "1.25.*",
+        "spatie/laravel-permission": "^2.12"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
