--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "git@github.com:twbs/bootstrap.git#^4.1.3",
     "jquery": "^3.3.1",
     "components-font-awesome": "^5.0.6",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "jquery-raty": "https://github.com/wbotelhos/raty.git"
   }
 }
