--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravelcollective/html": "^5.4.0",
         "nesbot/carbon": "1.25.*",
         "pusher/pusher-php-server": "^3.2",
-        "spatie/laravel-permission": "^2.12"
+        "spatie/laravel-permission": "^2.12",
+        "yoeunes/toastr": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
